refactor(ffi): adopt upstream babashka ffi